--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
 .ipynb_checkpoints/
 naver API 정보.txt
+
+EX) 01-HTML 파싱.ipynb
+EX) 02-Web Page Scrapping.ipynb
+EX) 03-Naver News API.ipynb
+EX) 04-Selenium Automation.ipynb
+EX) 05-정규표현식.ipynb
+EX) 06-EDA with Pandas.ipynb
+EX) 07-Series와 DataFrame.ipynb
+EX) 08-Visualization.ipynb
+EX) 09-첫번째 머신러닝 프로그램.ipynb
+EX) 10-선형모델.ipynb
+EX) 11-스케일 조정.ipynb
+EX) 12-주성분 분석.ipynb
+EX) 13-군집화.ipynb
+EX) 14-모델의 평가.ipynb
